fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
   font-size: 1vw;
   position: relative;
   background-color: #0a1548;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 span {
   font-size: 1em;
